crates/swc_ecma_parser/tests/flow/types/import_type_shorthand/typeof_in_typeof_reserved_value.js
// error: typeof specifier in typeof declaration
import typeof {typeof switch} from "foo";
